Add scikit-learn-style estimators for all algorithms (CIP-0004)
Refactored core algorithms into sklearn-style estimators while maintaining
full backward compatibility with functional APIs.

New estimator classes:
- FitnessComplexity: fit(), fit_transform(), fitted attributes (fitness_, complexity_, history_, n_iter_)
- ECI: fit(), fit_transform(), fitted attributes (eci_, pci_)
- SinkhornScaler: fit(), transform(), fit_transform(), fitted attributes (u_, v_, W_, history_)

API improvements:
- Hyperparameters in __init__ (n_iter, tol, etc.)
- Data in fit(X) method
- Results via fitted attributes (trailing underscore convention)
- fit_transform() convenience method
- Method chaining support (fit() returns self)

Backward compatibility:
- All functional APIs unchanged (fitness_complexity, compute_eci_pci, sinkhorn_masked)
- Estimators delegate to functional implementations (DRY)
- Existing code continues to work without modifications

Testing:
- Added 15 new tests for estimator classes
- Tests verify estimator vs. functional API equivalence
- Tests verify method chaining, fitted attributes, parameters
- All 51 existing tests still pass (backward compatibility confirmed)

Documentation:
- Updated module docstrings
- Added comprehensive class docstrings with examples
- Updated __init__.py to export estimators
- Updated tenet: notebook-as-narrative-backed-by-functions

Implements:
- REQ-0006: Algorithms follow scikit-learn estimator conventions
- CIP-0004: Refactor algorithms into sklearn-style estimators
- Tenet: notebook-as-narrative-backed-by-functions (updated with API design principles)
- Backlog task: 2026-02-02_sklearn-style-estimators (COMPLETED)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Scientific software for fitness-complexity analysis and economic 
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [
-    {name = "Neil D. Lawrence", email = "n.lawrence@statslab.cam.ac.uk"}
+    {name = "Neil D. Lawrence", email = "lawrennd@gmail.com"}
 ]
 dependencies = [
     "numpy>=1.24",
