--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,10 @@ dev = [
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+include = ["fitkit*"]
+exclude = ["tests*", "cip*", "tenets*", "backlog*", "requirements*", "scripts*"]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
