--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,15 @@ python_functions = "test_*"
 [tool.ruff]
 line-length = 100
 target-version = "py311"
-select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "PT"]
+ignore = [
+    "E712",  # Comparison to True/False (overly pedantic)
+    "N803",  # Argument naming (allow mathematical conventions like M, X, F, Q)
+    "N806",  # Variable naming (allow mathematical conventions)
+    "B905",  # zip() without strict= (not critical for our use cases)
+]
 
 [tool.mypy]
 python_version = "3.11"
