Fix mypy union-attr errors: use Any for history dict values

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,8 @@ module = [
     "numpy.*",
     "scipy.*",
     "sklearn.*",
+    "pandas.*",
+    "google.*",
     "google.cloud.*",
     "google.auth.*",
     "google.colab.*",
