--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "matplotlib>=3.7",
     "google-cloud-bigquery>=3.11",
     "google-auth>=2.22",
+    "google-cloud-resource-manager>=1.10",  # For auto-detecting projects
     "pyarrow>=12.0",  # For parquet support
 ]
 
