Fix mypy errors for diagnostics module
- Add matplotlib.* to mypy ignore_missing_imports
- Add type: ignore comment for resourcemanager_v3 import

All mypy checks now passing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,5 +76,6 @@ module = [
     "google.cloud.*",
     "google.auth.*",
     "google.colab.*",
+    "matplotlib.*",
 ]
 ignore_missing_imports = true
