Add Python bytecode files to gitignore
Add standard Python cache patterns to prevent committing:
- __pycache__/ directories
- *.pyc, *.pyo, *.pyd files
- Compiled extensions (*.so)

These files were showing up as modified/untracked and should
never be committed to version control.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 # VibeSafe System Files (Auto-added during installation)
 # These are VibeSafe infrastructure - not your project content
 
+# Python bytecode and caches
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
 # VibeSafe virtual environment
 .venv-vibesafe/
 
