Add clean MATLAB validation notebook with correct SpectralCluster usage
- Uses SpectralCluster API directly (not internal methods)
- Tests 300-point circles with sigma=0.158 (MATLAB equivalent)
- Tests 150-point circles with sigma=0.2 (CIP-0007 sigma scaling)
- Includes visualizations, purity analysis, and validation summaries
- Replaces outdated matlab_experiments_validation.ipynb approach

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ tenets/combine_tenets.py
 # VibeSafe documentation (system files)
 docs/whats_next_script.md
 docs/yaml_frontmatter_examples.md
+
+# Jupyter notebook checkpoints
+.ipynb_checkpoints/
