Fix typo in CIP-0009 references section
Changed 'Oth' to 'Other Validation' in Kemp-Benedict reference

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ docs/yaml_frontmatter_examples.md
 
 # Jupyter notebook checkpoints
 .ipynb_checkpoints/
+
+# Atlas of Economic Complexity downloaded data (large files)
+fitkit/data/atlas/
