CIP-000C: Implement World Bank indicators data access
Implements flexible data loader for World Bank World Development Indicators,
enabling multidimensional validation of economic fitness scores.

Implementation:
- load_worldbank_indicator(code, ...): Core function for any WDI indicator
- load_gdp_per_capita(...): Convenience wrapper for GDP per capita (NY.GDP.PCAP.CD)
- load_human_capital_index(...): Wrapper for Human Capital Index (HD.HCI.OVRL)
- list_worldbank_available_countries(code): Check country coverage per indicator

Features:
- Direct World Bank API calls (no external dependencies)
- Per-indicator caching in fitkit/data/worldbank/
- ISO3 country codes (matches Atlas data format for easy merging)
- Country and date range filtering
- Handles duplicate entries and missing data
- Metadata storage (indicator name, description)

Tested indicators:
- GDP per capita (NY.GDP.PCAP.CD): 258 countries, 1960-2020+
- Human Capital Index (HD.HCI.OVRL): 173 countries, 2017/2018/2020
- Trade openness (NE.TRD.GNFS.ZS): 222 countries, various years

Example usage:
  from fitkit import load_gdp_per_capita, load_human_capital_index
  from fitkit import load_atlas_trade, fitness_complexity

  # Load economic indicators
  gdp = load_gdp_per_capita(start_year=2020, end_year=2020)
  hci = load_human_capital_index(start_year=2020, end_year=2020)

  # Compute fitness and validate
  M, countries, _ = load_atlas_trade(year=2020)
  F = fitness_complexity(M)[0]

  # Analyze Fitness-GDP-HCI relationships
  # ... merge and correlate

Technical details:
- Handles API pagination with per_page=20000
- Deduplicates country-year records (keeps last)
- Pivots to wide format (countries × years)
- User-agent header for API compliance

Data source: World Bank World Development Indicators
https://data.worldbank.org/

Status: Implemented (tested with 3 indicators across multiple countries)
See CIP-000C for full design, rationale, and example analysis patterns.

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ docs/yaml_frontmatter_examples.md
 
 # Atlas of Economic Complexity downloaded data (large files)
 fitkit/data/atlas/
+
+# World Bank indicators downloaded data
+fitkit/data/worldbank/
