Update .gitignore for world_bank cache directory
- Add fitkit/data/world_bank/ to .gitignore (was worldbank/ with no underscore)
- Add debug_*.py pattern to ignore temporary diagnostic scripts
- Minor: Fix capitalization in test_perfect_nesting.py comment

--- a/.gitignore
+++ b/.gitignore
@@ -64,5 +64,9 @@ docs/yaml_frontmatter_examples.md
 # Atlas of Economic Complexity downloaded data (large files)
 fitkit/data/atlas/
 
-# World Bank indicators downloaded data
+# World Bank indicators downloaded data (both spellings)
 fitkit/data/worldbank/
+fitkit/data/world_bank/
+
+# Debug/diagnostic scripts (temporary)
+debug_*.py
